--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,13 @@
   "name": "自動火災報知設備 判定アプリ",
   "short_name": "火災報知判定",
   "description": "消防法施行令第21条に基づく自動火災報知設備の設置義務と特小自火報の適用可否を判定するWebアプリ",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "orientation": "portrait-primary",
   "theme_color": "#34485e",
   "background_color": "#f0f4f7",
   "lang": "ja",
-  "scope": "/",
+  "scope": "./",
   "icons": [
     {
       "src": "icons/icon.svg",
@@ -42,7 +42,7 @@
       "name": "判定を開始",
       "short_name": "判定開始",
       "description": "建物情報を入力して判定を開始する",
-      "url": "/",
+      "url": "./",
       "icons": [
         {
           "src": "icons/favicon.svg",
